fixed go version
